# poocr

./: .gitignore  PDF.py  PULL_REQUEST_TEMPLATE.md  README.md  clean.sh  multi-page PDF.py  pdf_invoice_utils.py  requirements.txt  setup.cfg
demo/: VatInvoice_demo.py  学习资料.md
demo/excel/: TrainTicketOCR2Excel.xlsx  VatInvoice_demo.py
demo/ocr/: IDCard_demo.py  TrainTicketOCR.py  VatIn_demo.py
demo/ocr/发票识别/: main.py
dev/: excel.py
dev/20231129/: BankCardOCR2Excel.xlsx  LicensePlateOCR2Excel.xlsx  bank2excel.py  car2excel.py
dev/baidu/: test.py
dev/ofd/: test.py
dev/二次开发/: identify_invoice.py  invoiceOCR.py
dev/发票增加一列/: VatInvoiceOCR2Excel.xlsx  add_row.py  test.py
dev/完税凭证/: test.py
dev/支持pdf/: add_row.py  pdf_test.py  test.py
dev/百度/社保卡/: test.py
dev/银行回单/: test.py
docs/: 1.0.0调用关系.xmind  python识别发票 1行代码搞定.xmind
examples/: BankCardOCR.py  IDCardOCR.py  TrainTicketOCR2Excel_Demo.py
examples/demo/: 五一感悟.md
examples/demo/excel/: VatInvoice_demo.py  (+1 more)
examples/dev/: excel.py  ticket.xlsx
gui/: README.md
gui/pro/: 发票.py
gui/qtpy/: main.py
gui/ui/: button.py  button.ui
poocr/: __init__.py
poocr/api/: __init__.py  ocr.py  ocr2excel.py
poocr/core/: BaiduOCR.py  HuaweiOCR.py  OCR.py
poocr/lib/: CommonUtils.py  Config.py  Const.py
script/: clean.sh  requirements.txt
tests/: BizLicenseOCR2Excel.xlsx  IDCardOCR2Excel.xlsx  __init__.py  test_tencent.py
tests/test_code/: __init__.py  household2excel.xlsx  test_bugs.py  test_dev.py  test_huawei.py  test_init.py  test_ocr.py  test_ocr2excel.py
tests/test_files/: poocr-config.toml
(+45 files in other folders)
