[metadata]
name = poocr
version = 0.1.4
description = pip install poocr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/poocr/issues
    Documentation = https://github.com/CoderWanFeng/poocr/blob/main/README.md
    Source Code = https://github.com/CoderWanFeng/poocr

[options]
packages = find:
install_requires =
    toml
    tencentcloud-sdk-python
    poprogress
    pofile
    pandas
python_requires = >=3.7
include_package_data = True
zip_safe = False